Day 3/Lab3/AST_Exercise_1/LanguageGenerator/Exercise1.g4
grammar Exercise1;

@lexer::header {
from lexererr import *
}

@lexer::members {
def emit(self):
    tk = self.type
    result = super().emit()
    if tk == self.UNCLOSE_STRING:       
        raise UncloseString(result.text)
    elif tk == self.ILLEGAL_ESCAPE:
        raise IllegalEscape(result.text)
    elif tk == self.ERROR_CHAR:
        raise ErrorToken(result.text)
    elif tk == self.UNTERMINATED_COMMENT:
        raise UnterminatedComment()
    else:
        return result;
}

options{
	language=Python3;
}

program 
    : ( expression )* EOF
    ;

expression
    : expression (Add|Sub) factor
    | factor
    ;

factor
    : factor (Mul|Div) term
    | term
    ;

Add : '+';
Sub : '-';
Mul : '*';
Div : '/';

term 
    : Integer
    | Identifier
    ;

Integer: [0-9]+ ;
Identifier: [a-z]+ ;

WS : [ \t\r\n]+ -> skip; // skip spaces, tabs, newlines

ERROR_CHAR: .;
UNCLOSE_STRING: .;
ILLEGAL_ESCAPE: .;
UNTERMINATED_COMMENT: .;
